--- a/style.css
+++ b/style.css
@@ -1,18 +1,49 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
- background-color: #ddd; 
+body {
+    background-color: #ddd;
+    padding: 10px;
 }
-.select{
-    text-align : center;
+
+.main {
+    text-align: center;
+    position: relative;
+    height: 99vh;
+    width: 99%;
+    /* border: 1px solid green; */
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background: rgba(0, 0, 0, 0.1)
 }
+
+.select {
+    height: 6vh;
+    /* min-height: 50px; */
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    text-align: center;
+}
+
 .acccountSelect {
-    width : 50vw;
+    width: 50vw;
     font-size: 1em;
-    padding : 5px;
+    padding: 5px;
 }
+.tablediv{
+    max-height: 93vh;
+    overflow: auto;
+    width: 100%;
+    position: absolute;
+    top: 6vh;
+    background: rgba(255, 255, 255, 1);
+    border-top: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    margin : 0px ;
+  }
 
 .title {
     width: 100%;
@@ -20,19 +51,4 @@ body{
     font-size: 1.2em;
     font-weight: bold;
     padding: 10px;
-    /* margin-bottom: 20px; */
-    border-bottom: 1px solid black;
-}
-
-.rowDiv {
-    border-bottom: 1px solid black;
-    overflow: auto;
-}
-
-.box {
-    display: inline-block;
-    /* width: 140px; */
-    margin: 5px;
-
-
 }
